@@ -71,7 +71,7 @@ ser_asm.o: ser_asm.s
 
 distdir:
 	mkdir $(DISTDIR)/arch/i86/drivers/char/KeyMaps
-	make -C KeyMaps distdir
+	${MAKE} -C KeyMaps distdir
 	cp -pf CGAsnow Changes NEW_NOTES $(DISTDIR)/arch/i86/drivers/char
 	cp -pf NOTES README_CONSOLE $(DISTDIR)/arch/i86/drivers/char
 	cp -pf Makefile Config.in $(DISTDIR)/arch/i86/drivers/char
